--- a/index_01.html
+++ b/index_01.html
@@ -29,36 +29,31 @@
         /*배경색이 회색 반투명으로 변화*/
         }
 
-        .box {
-          height: 50px;
-          border-radius: 5px;
-          background: rgba(255,0,0,0.5);
-          text-align: center;
-          line-height: 50px;
-          color: white;
-        }
         /* Mobile Device */
         /* 768px 미만 해상도의 모바일 기기를 위한 코드를 작성한다.
            모든 해상도에서 이 코드가 실행됨. 미디어 쿼리를 지원하지 않는
            모바일 기기를 위해 미디어 쿼리 구문을 사용하지 않는다.*/
         [class*="col-"] {
-          display: inline-block;
+          float:left;
           padding: 1.5625%;
           border: 1px solid red;
           width: 100%;
+         
           overflow: hidden;
+          transition: all 1s ease-out;
+        }
+        .row::after{
+            content:'';
+            clear: both;
+            display: block;
         }
 
-        .row:after {
-          content: '';
-          display: block;
-        }
-
+        /**/
         [class*="_headline"] {
           display: none;
         }
 
-                /* */
+        /*모바일 사이즈를 정의 */
         @media all and (max-width:767px) {
           [class*="col-"] {
             border: 1px solid red;
@@ -71,11 +66,11 @@
           }
         }
 
-                /* Tablet Device */
+        /* Tablet Device */
         @media all and (min-width:768px) and (max-width:1024px) {
-                /*사용자 해상도가 768px 이상이고 1024px 이하일 때 이 코드가 실행됨.
-                아이패드 또는 비교적 작은 해상도의 랩탑이나 데스크톱에 대응하는 코드를 작성한다.*/
-                /*12단으로 그리드뷰를 구성*/
+        /*사용자 해상도가 768px 이상이고 1024px 이하일 때 이 코드가 실행됨.
+         아이패드 또는 비교적 작은 해상도의 랩탑이나 데스크톱에 대응하는 코드를 작성한다.*/
+        /*12단으로 그리드뷰를 구성*/
           .col-t-1 {
             width: 8.333333333333333%;
           }
@@ -128,7 +123,8 @@
             width: 100vw;
             height: 100vh;
             background: rgba(255,100,0,0.5);
-                        /*배경색이 오렌지 반투명으로 변화*/
+            /*배경색이 오렌지 반투명으로 변화*/
+            font-size:85%;
           }
 
           .tablet_headline {
@@ -136,10 +132,10 @@
           }
         }
 
-                /* Desktop Device */
+        /* Desktop Device */
         @media all and (min-width:1025px) {
-                /*사용자 해상도가 1025px 이상일 때 이 코드가 실행됨.
-                1025px 이상의 랩탑 또는 데스크톱에 대응하는 코드를 작성한다.*/
+            /*사용자 해상도가 1025px 이상일 때 이 코드가 실행됨.
+            1025px 이상의 랩탑 또는 데스크톱에 대응하는 코드를 작성한다.*/
           .col-p-1 {
             width: 8.333333333333333%;
           }
@@ -192,7 +188,8 @@
             width: 100vw;
             height: 100vh;
             background: rgba(255,0,0,0.5);
-                        /*배경색이 붉은색 반투명으로 변화*/
+            /*배경색이 붉은색 반투명으로 변화*/
+
           }
 
           .pc_headline {
